add progressBar scroll

--- a/style.css
+++ b/style.css
@@ -25,16 +25,20 @@ body {
     padding: 10px 5px;
 }
 
-
 button {
     transition: all .2s;
     font-size: 1rem;
     letter-spacing: 1px;
     padding: 0.5rem 1rem;
+    border-radius: 20px;
 }
 
 button:active {
     transform: scale(0.85);
+}
+
+#progress {
+    height: 40px;
 }
 
 
